# arbolta

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
crates/arbolta/: Cargo.toml
crates/arbolta/src/: bit.rs  cell.rs  lib.rs  signal.rs
crates/arbolta/src/module/: design.rs  hardware_module.rs  mod.rs  port.rs
crates/arbolta/src/synth/: mod.rs  netlist.rs  yosys.rs
crates/arbolta/tests/: test_bit.rs  test_bitvec.rs  test_cell.rs  test_module.rs  test_signal.rs  test_synth.rs
crates/arbolta/tests/test_netlists/: 4b_adder_netlist.json  4b_nested_adder_netlist.json
crates/python_bindings/: Cargo.toml  pyproject.toml
crates/python_bindings/py_src/arbolta/: __init__.py  design.py
crates/python_bindings/src/: conversion.rs  design.rs  lib.rs
examples/: README.md  synth.tcl  tutorial.ipynb
examples/cells/: cells.lib  cells.v
examples/designs/: inexact_fma_vector_mac.sv  int_vector_mac.sv  kulisch_vector_mac.sv  misc_int_vector_mac.sv  normalized_fma_vector_mac.sv
examples/designs/common/: integer.sv  minifloat.sv  misc.sv  sign_magnitude.sv
requirements/: requirements_examples.txt
