[package]
name = "arbolta"
version = "0.1.0"
authors = ["AMD Research & Advanced Development"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.16.1"
num-traits = "0.2"
once_cell = "1.19.0"
rstest = "0.23.0"
flexbuffers = "2.0.0"
yosys-netlist-json = { git = "https://github.com/alexredd99/yosys-netlist-json.git" }
thiserror = "2.0.3"
