[package]
name = "arbolta-python"
version = "0.1.0"
authors = ["AMD Research & Advanced Development"]
edition = "2021"

[lib]
name = "arbolta"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
numpy = "0.23.0"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

[dependencies.arbolta]
path = "../arbolta"

[features]
defaut = ["pyo3/extension-module"]
